--- a/index.html
+++ b/index.html
@@ -19,33 +19,42 @@
 
 <body>
     <div id="Grilla">
-        <nav class="Nav">
+        <div class="Nav">
             <!--Enlaces Relativos-->
             <!--Lista desordenada-->
-            <ul>
-                <li>
-                    <a class="Logo" href="#">
-                        <h4>Twenty-one<br>Apuestas Virtuales</h4>
-                        <img src="./imagenes/twenty-one-kebab-case.png" class="Logo-img" alt="logo">
-                    </a>
-                </li>
-                <li>
-                    <a class="navegador" href="./pages/casino.html">Casino</a>
-                </li>
-                <li>
-                    <a class="navegador" href="./pages/deportes.html">Deportes</a>
-                </li>
-                <li>
-                    <a class="navegador" href="./pages/informacion.html">Informacion</a>
-                </li>
-                <li>
-                    <a class="navegador" href="./pages/promociones.html">Promociones</a>
-                </li>
-                <li>
-                    <a class="navegador" href="./pages/registrate.html">Registrate</a>
-                </li>
-            </ul>
-        </nav>
+            <nav class="navbar navbar-expand-lg navbar navbar-dark" ;>
+                <div class="container">
+                    <a class="navbar-brand" href="#"><img src="./imagenes/Logo-Twenty-one-kebab-case.png"
+                            class="Logo-Twenty-one" alt="Logo"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./pages/casino.html"><span>Casino</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/deportes.html"> <span>Deportes</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/informacion.html"> <span>Informacion</span></a>
+                            </li> 
+                            </li>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page"
+                                            href="./pages/promociones.html"><span>Promociones</span></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./pages/registrate.htmls"><span>Registrate</span></a>
+                                    </li>
+                            </div>
+                        </nav>
+                    </div>
 
         <!--Inicio del Header-->
         <!--selector id y de clase-->
@@ -57,9 +66,10 @@
                 <p>⚽️ 15/03/2023 21:30</p>
                 <p>
                     Real Sociedad 2.0
-                    <img src="./imagenes/real_sociedad_footballteam_18006-kebab-case.png" alt="Real Sociedad">
+                    <img src="./imagenes/real_sociedad_footballteam_18006-kebab-case.png"
+                        alt="Real Sociedad">
                     vs Sevilla 1.1
-                    <img src="./imagenes/realmadrid-kebab-case.png" alt="Sevilla">
+                    <img src="./imagenes/Sevilla.png" alt="Sevilla">
                 </p>
             </div>
             <div class="Partido1">
@@ -69,7 +79,7 @@
                 <p>
                     Atletico Madrid 1.5
                     <img src="./imagenes/Atletico.png" alt="Atletico"> vs
-                    Bayern Munich 2.0
+                    Bayern M 2.0
                     <img src="./imagenes/BayernMunich-kebab-case.png" alt="Bayern Munich">
                 </p>
             </div>
@@ -83,6 +93,7 @@
                     <img src="./imagenes/realmadrid-kebab-case.png" alt="Real Madrid">
                 </p>
             </div>
+        </header>
         </header>
         <!--Comienzo del Main-->
         <main class="contenedor">
@@ -323,7 +334,7 @@
         <div class="Secciones">
             <section class="Seccion1">
                 <h2>Juegos de mesa</h2>
-                <h3>Ruleta, Poker, Black Jack</h3>
+                <h5>Ruleta, Poker, Black Jack</h5>
                 <img class="Imagen-Seccion1" src="./imagenes/ruletta-casino-kebab-case.jpeg" alt="Ruleta">
                 <p>
                     Participa de los distintos modos <br>que te traemos, juga desde tu
@@ -333,7 +344,7 @@
             </section>
             <section class="Seccion2">
                 <h2>Casino en vivo</h2>
-                <h3>Disfruta del casino Twenty-one!</h3>
+                <h5>Disfruta del casino Twenty-one!</h5>
                 <img class="Imagen-Seccion2" src="./imagenes/casinonuevo-kebab-case.jpeg" alt="Casino">
                 <p>
                     En Twenty-one contamos con los mejores juegos<br>de casino en vivo.
@@ -343,7 +354,7 @@
             </section>
             <section class="Seccion3">
                 <h2>Video Bingo</h2>
-                <h3>Entra y gana con videobingo!</h3>
+                <h5>Entra y gana con videobingo!</h5>
                 <img class="Imagen-Seccion3" src="./imagenes/bingo-riveirinhos-kebab-case.jpg" alt="Bingo">
                 <p>
                     Los mejores juegos de videobingo<br>
