--- a/pages/casino.html
+++ b/pages/casino.html
@@ -43,21 +43,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./deportes.html"> <span>Deportes</span></a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="./informacion.html" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    <span>Informacion</span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#"> <img src="../imagenes/grupo.png"
-                                                class="Logo-b" alt="Sobre nosotros"> Sobre Nosotros</a></li>
-                                    <li><a class="dropdown-item" href="#"> <img src="../imagenes/link.png"
-                                                class="Logo-b" alt="Link"> Links Destacados</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#"> <img src="../imagenes/apoyo.png"
-                                                class="Logo-b" alt="Apoyo"> Ayuda al consumidor</a></li>
-                                </ul>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./informacion.html"> <span>Informacion</span></a>
+                            </li> 
                             </li>
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
