--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -36,21 +36,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./deportes.html"> <span>Deportes</span></a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="./informacion.html" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <span>Informacion</span></a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#"> <img src="../imagenes/grupo.png" class="Logo-b"
-                                        alt="Sobre nosotros"> Sobre Nosotros</a></li>
-                            <li><a class="dropdown-item" href="#"> <img src="../imagenes/link.png" class="Logo-b"
-                                        alt="Link"> Links Destacados</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#"> <img src="../imagenes/apoyo.png" class="Logo-b"
-                                        alt="Apoyo"> Ayuda al consumidor</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./informacion.html"> <span>Informacion</span></a>
                     </li>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -132,22 +119,21 @@
     <div class="Ayuda-Promo">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                     <img class="Ayuda-Logo" src="../imagenes/logo-lineagratuita-kebab-case.png" alt="Logo-Ayuda">
                 </div>
-                <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                     <img class="Ayuda-Logo2" src="../imagenes/Logo-Ayuda-kebab-case.png" alt="Logo-Ayuda">
                 </div>
-                <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                     <img class="Ayuda-Logo3" src="../imagenes/logo-autoexcluyete-kebab-case.png" alt="Logo-Ayuda">
                 </div>
             </div>
         </div>
     </div>
-    </div>
-    <div class="container-fluid">
+    <div class="Pago-Promo">
+    <div class="container">
         <div class="row">
-            <div class="Pago">
                 <div class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
                     <a href="https://www.americanexpress.com/es-ar/">
                         <img class="Medios-Pago" src="../imagenes/american-express-kebab-case.png" alt="Pagos">
