--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -20,7 +20,7 @@
     <!--Enlaces relativos-->
     <!--Inicio del Nav-->
     <!--Enlaces Relativos-->
-    <nav class="navbar navbar-expand-lg navbar navbar-dark";>
+    <nav class="navbar navbar-expand-lg navbar navbar-dark" ;>
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../imagenes/Logo-Twenty-one-kebab-case.png"
                     class="Logo-Twenty-one" alt="Logo"></a>
@@ -37,21 +37,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./deportes.html"> <span>Deportes</span></a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="./informacion.html" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <span>Informacion</span></a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#"> <img src="../imagenes/grupo.png" class="Logo-b"
-                                        alt="Sobre nosotros"> Sobre Nosotros</a></li>
-                            <li><a class="dropdown-item" href="#"> <img src="../imagenes/link.png" class="Logo-b"
-                                        alt="Link"> Links Destacados</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#"> <img src="../imagenes/apoyo.png" class="Logo-b"
-                                        alt="Apoyo"> Ayuda al consumidor</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./informacion.html"> <span>Informacion</span></a>
                     </li>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -72,196 +59,141 @@
     </header>
     <!--Inicio de Formularios-->
     <!--Fila DE informacion de mi sitio-->
-    <div class="Formularios">
-        <form action="procesar.php" method="post">
-            <p>
-                <label for="nombre">Ingrese su Nombre</label>
-                <input type="text" name="nombre" required placeholder="Ingrese su nombre">
-            </p>
-            <p>
-                <label for="apellido">Ingrese su apellido</label>
-                <input type="text" name="apellido" required placeholder="Ingrese su apellido">
-            </p>
-            <p>
-                <label for="email">Ingrese su correo electronico</label>
-                <input type="email" name="email" required placeholder="hola@servidor">
-            </p>
-            <p>
-                <label for="pass">Ingrese su contraseña</label>
-                <input type="password" name="pass" required placeholder="Ingrese su contrasena">
-            </p>
-            <p>
-                <label for="number">Edad</label>
-                <input type="number">
-            </p>
-            <!--Input radio-->
-            <h4>Medios de pago</h4>
-            <label for=" Medios de pago"> Trasferencia Bancaria</label>
-            <input type="radio" name="Medios de pago" value="Trasferencia bancaria">
-
-            <label for="Medios de pago">Tarjeta de debito o credito</label>
-            <input type="radio" name="Medios de pago" value="Tarjeta de debito o credito">
-            <!--Input checkbox-->
-            <p>
-            <h4> Terminos y Condiciones</h4>
-            <label for="Terminos y Condiciones">Acepto los terminos y condicciones de
-                esta plataforma
-            </label>
-            <input type="checkbox" name="acepto" value="1">
-            </p>
-            <h4> Dejanos tus dudas y cometarios </h4>
-            <!--Textarea-->
-            <textarea name="mensaje" cols="30" rows="10"></textarea>
-            <p>
-                <button type="submit">Enviar</button>
-                <button type="reset">Borrar Formulario</button>
-
-            </p>
-        </form>
-    </div>
-    <form>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
-            <div id="emailHelp" class="form-text">
-                We'll never share your email with anyone else.
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6"">
+          <input type=" text" class="form-control" placeholder="Last name" aria-label="Last name">
             </div>
         </div>
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" />
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Email address</label>
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Password</label>
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <span class="input-group-text">@</span>
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+                <label for="floatingInputGroup1">Username</label>
+            </div>
+
         </div>
-        <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    <!--Fin del primer formulario-->
-    <!--Comienzo de otro form-->
-    <div class="mb-3">
-        <label for="formFile" class="form-label">Default file input example</label>
-        <input class="form-control" type="file" id="formFile" />
     </div>
-    <div class="mb-3">
-        <label for="formFileMultiple" class="form-label">Multiple files input example</label>
-        <input class="form-control" type="file" id="formFileMultiple" multiple />
-    </div>
-    <div class="mb-3">
-        <label for="formFileDisabled" class="form-label">Disabled file input example</label>
-        <input class="form-control" type="file" id="formFileDisabled" disabled />
-    </div>
-    <div class="mb-3">
-        <label for="formFileSm" class="form-label">Small file input example</label>
-        <input class="form-control form-control-sm" id="formFileSm" type="file" />
-    </div>
-    <div>
-        <label for="formFileLg" class="form-label">Large file input example</label>
-        <input class="form-control form-control-lg" id="formFileLg" type="file" />
-    </div>
-    <!--FIN DE FORM-->
-    <!--Comienzo de otro form-->
-    <form class="row g-3">
-        <div class="col-md-4">
-            <label for="validationServer01" class="form-label">First name</label>
-            <input type="text" class="form-control is-valid" id="validationServer01" value="Mark" required />
-            <div class="valid-feedback">Looks good!</div>
-        </div>
-        <div class="col-md-4">
-            <label for="validationServer02" class="form-label">Last name</label>
-            <input type="text" class="form-control is-valid" id="validationServer02" value="Otto" required />
-            <div class="valid-feedback">Looks good!</div>
-        </div>
-        <div class="col-md-4">
-            <label for="validationServerUsername" class="form-label">Username</label>
-            <div class="input-group has-validation">
-                <span class="input-group-text" id="inputGroupPrepend3">@</span>
-                <input type="text" class="form-control is-invalid" id="validationServerUsername"
-                    aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required />
-                <div id="validationServerUsernameFeedback" class="invalid-feedback">
-                    Please choose a username.
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <label for="inputAddress" class="form-label">Address</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <label for="inputAddress2" class="form-label">Address 2</label>
+                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <label for="inputCity" class="form-label">City</label>
+                <input type="text" class="form-control" id="inputCity">
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <label for="inputState" class="form-label">State</label>
+                <select id="inputState" class="form-select">
+                    <option selected>Choose...</option>
+                    <option>...</option>
+                </select>
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <label for="inputZip" class="form-label">Zip</label>
+                <input type="text" class="form-control" id="inputZip">
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <label class="form-check-label" for="gridCheck">
+                        Check me out
+                    </label>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6">
-            <label for="validationServer03" class="form-label">City</label>
-            <input type="text" class="form-control is-invalid" id="validationServer03"
-                aria-describedby="validationServer03Feedback" required />
-            <div id="validationServer03Feedback" class="invalid-feedback">
-                Please provide a valid city.
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <button type="submit" class="btn btn-primary">Sign in</button>
             </div>
-        </div>
-        <div class="col-md-3">
-            <label for="validationServer04" class="form-label">State</label>
-            <select class="form-select is-invalid" id="validationServer04" aria-describedby="validationServer04Feedback"
-                required>
-                <option selected disabled value="">Choose...</option>
-                <option>...</option>
-            </select>
-            <div id="validationServer04Feedback" class="invalid-feedback">
-                Please select a valid state.
-            </div>
-        </div>
-        <div class="col-md-3">
-            <label for="validationServer05" class="form-label">Zip</label>
-            <input type="text" class="form-control is-invalid" id="validationServer05"
-                aria-describedby="validationServer05Feedback" required />
-            <div id="validationServer05Feedback" class="invalid-feedback">
-                Please provide a valid zip.
-            </div>
-        </div>
-        <div class="col-12">
-            <div class="form-check">
-                <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3"
-                    aria-describedby="invalidCheck3Feedback" required />
-                <label class="form-check-label" for="invalidCheck3">
-                    Agree to terms and conditions
-                </label>
-                <div id="invalidCheck3Feedback" class="invalid-feedback">
-                    You must agree before submitting.
+            </form>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                            <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox
+                                input</label>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked"
+                                checked>
+                            <label class="form-check-label" for="flexSwitchCheckChecked">Checked switch checkbox
+                                input</label>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-12">
-            <button class="btn btn-primary" type="submit">Submit form</button>
-        </div>
-    </form>
-    <!--Fin del form-->
+            <!--Fin del form-->
 
-    <!--Inicio de Footer-->
-    <footer id="pie">
-        <div class="Ultimo">
-            <h2>SOBRE NOSOTROS</h2>
-            <ul>
-                <li>Juego Responsable</li>
-                <li>Reglas</li>
-                <li>Contrato y Politica de Privacidad</li>
-            </ul>
-        </div>
-        <div class="Ultimo">
-            <h2>LINKS DESTACADOS</h2>
-            <ul>
-                <li>Black Jack</li>
-                <li>Casino</li>
-                <li>Bingo</li>
-                <li>Ruleta</li>
-            </ul>
-        </div>
-        <div class="Ultimo">
-            <h2>AYUDA</h2>
-            <ul>
-                <li>Idioma</li>
-                <li>Ayuda, terminos y condiciones</li>
-                <li>Contacto:Twenty-one@gmail.com</li>
-            </ul>
-        </div>
-        <div class="Ultimo">
-            <h2>SEGUINOS EN<br>NUESTRAS REDES</h2>
-            <img class="Imagen-Footer" src="../imagenes/facebook.png" alt="facebook">
-            <img class="Imagen-Footer" src="../imagenes/instagram.png" alt="Instagram">
-            <img class="Imagen-Footer" src="../imagenes/tik-tok-kebab-case.png" alt="Tik-tok">
-        </div>
-    </footer>
+            <!--Inicio de Footer-->
+            <footer id="pie">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                            <div class="Ultimo">
+                                <h2>SOBRE NOSOTROS</h2>
+                                <ul>
+                                    <li>Juego Responsable</li>
+                                    <li>Reglas</li>
+                                    <li>Contrato y Politica de Privacidad</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                            <div class="Ultimo">
+                                <h2>LINKS DESTACADOS</h2>
+                                <ul>
+                                    <li>Black Jack</li>
+                                    <li>Casino</li>
+                                    <li>Bingo</li>
+                                    <li>Ruleta</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                            <div class="Ultimo">
+                                <h2>AYUDA</h2>
+                                <ul>
+                                    <li>Idioma</li>
+                                    <li>Ayuda, terminos y condiciones</li>
+                                    <li>Contacto:Twenty-one@gmail.com</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                            <div class="Ultimo">
+                                <h2>SEGUINOS EN<br>NUESTRAS REDES</h2>
+                                <img class="Imagen-Footer" src="../imagenes/facebook.png" alt="facebook">
+                                <img class="Imagen-Footer" src="../imagenes/instagram.png" alt="Instagram">
+                                <img class="Imagen-Footer" src="../imagenes/tik-tok-kebab-case.png" alt="Tik-tok">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
 </body>
 
 </html>
