--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="Nav">
             <!--Enlaces Relativos-->
             <!--Lista desordenada-->
-            <nav class="navbar navbar-expand-lg navbar navbar-dark" ;>
+            <nav class="navbar navbar-expand-sm navbar navbar-dark" ;>
                 <div class="container">
                     <a class="navbar-brand" href="#"><img src="./imagenes/Logo-Twenty-one-kebab-case.png"
                             class="Logo-Twenty-one" alt="Logo"></a>
