--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -8,8 +8,8 @@
     <!--Logo-->
     <link rel="shortcut icon" href="../imagenes/twenty-one-kebab-case.png" type="image/x-icon">
     <!--Boostrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" 
+    crossorigin="anonymous">
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Promociones</title>
@@ -19,7 +19,7 @@
     <!--Inicio del Body-->
     <!--Inicio del Nav-->
     <!--Enlaces Relativos-->
-    <nav class="navbar navbar-expand-lg navbar navbar-dark" ;>
+    <nav class="navbar navbar-expand-sm navbar navbar-dark" ;>
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../imagenes/Logo-Twenty-one-kebab-case.png"
                     class="Logo-Twenty-one" alt="Logo"></a>
@@ -131,25 +131,18 @@
             </div>
         </div>
     </div>
-    <div class="Pago-Promo">
     <div class="container">
         <div class="row">
-                <div class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="Pago-Promo">
                     <a href="https://www.americanexpress.com/es-ar/">
                         <img class="Medios-Pago" src="../imagenes/american-express-kebab-case.png" alt="Pagos">
                     </a>
-                </div>
-                <div class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
                     <a href="https://www.visa.com.ar/visa-home-ar.html">
                         <img class="Medios-Pago" src="../imagenes/visa.png" alt="Pagos">
                     </a>
-                </div>
-                <div class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
-                    <a href="https://www.mastercard.com.ar/es-ar.html">
                         <img class="Medios-Pago" src="../imagenes/master-card-kebab-case.png" alt="Pagos">
                     </a>
-                </div>
-                <div class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
                     <a href="https://bitcoin.org/es/bitcoin-para-personas">
                         <img class="Medios-Pago" src="../imagenes/bitcoin.png" alt="Pagos">
                     </a>
@@ -204,7 +197,8 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" 
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
