--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -8,19 +8,19 @@
     <!--Logo-->
     <link rel="shortcut icon" href="../imagenes/twenty-one-kebab-case.png" type="image/x-icon">
     <!--Boostrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+     crossorigin="anonymous">
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Registrate</title>
 </head>
 
-<body>
+<body class="Body-Registrate">
     <!--Inicio del Nav-->
     <!--Enlaces relativos-->
     <!--Inicio del Nav-->
     <!--Enlaces Relativos-->
-    <nav class="navbar navbar-expand-lg navbar navbar-dark" ;>
+    <nav class="navbar navbar-expand-sm navbar navbar-dark" ;>
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../imagenes/Logo-Twenty-one-kebab-case.png"
                     class="Logo-Twenty-one" alt="Logo"></a>
@@ -194,6 +194,8 @@
                     </div>
                 </div>
             </footer>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" 
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
