--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!--Aos-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Otro link-->
+    <link href="css/hover.css" rel="stylesheet" media="all">
 
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="./css/style.css">
@@ -68,39 +70,50 @@
     <!--selector id y de clase-->
     <!--Imagenes-->
     <header id="header">
-        <div class="Partido1">
-            <h4>LIGA DE ESPAÑA</h4>
-            <p>Copa UEFA</p>
-            <p>⚽️ 15/03/2023 21:30</p>
-            <p>
-                Real S. 2.0
-                <img src="./imagenes/real_sociedad_footballteam_18006-kebab-case.png" class="Img-Partido1"
-                    alt="Real Sociedad">vs Sevilla 1.1
-                <img src="./imagenes/Sevilla.png" class="Img-Partido1" alt="Sevilla">
-            </p>
-        </div>
-        <div class="Partido1">
-            <h4>UEFA CHAMPIONS</h4>
-            <p>Octavos de final</p>
-            <p>⚽️ 15/03/2023 17:30</p>
-            <p>
-                Atlético Madrid 1.5
-                <img src="./imagenes/Atletico.png" class="Img-Partido1" alt="Atletico"> vs
-                Bayern M 2.0
-                <img src="./imagenes/BayernMunich-kebab-case.png" class="Img-Partido1" alt="Bayern Munich">
-            </p>
-        </div>
-        <div class="Partido1">
-            <h4>LIGA DE ESPAÑA</h4>
-            <p>Fecha 19</p>
-            <p>⚽️ 16/03/2023 17:30</p>
-            <p>Barcelona 2.0
-                <img src="./imagenes/barcelona.png" class="Img-Partido1" alt="Barcelona"> vs
-                Real Madrid 2.5
-                <img src="./imagenes/realmadrid-kebab-case.png" class="Img-Partido1" alt="Real Madrid">
-            </p>
-        </div>
-        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                    <div class="Partido1">
+                        <h4>LIGA DE ESPAÑA</h4>
+                        <p>Copa UEFA</p>
+                        <p>⚽️ 15/03/2023 21:30</p>
+                        <p>
+                            Real S. 2.0
+                            <img src="./imagenes/real_sociedad_footballteam_18006-kebab-case.png" class="Img-Partido1"
+                                alt="Real Sociedad">vs Sevilla 1.1
+                            <img src="./imagenes/Sevilla.png" class="Img-Partido1" alt="Sevilla">
+                        </p>
+                    </div>
+                </div>
+                    <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                        <div class="Partido1">
+                            <h4>UEFA CHAMPIONS</h4>
+                            <p>Octavos de final</p>
+                            <p>⚽️ 15/03/2023 17:30</p>
+                            <p>
+                                Atlético Madrid 1.5
+                                <img src="./imagenes/Atletico.png" class="Img-Partido1" alt="Atletico"> vs
+                                Bayern M 2.0
+                                <img src="./imagenes/BayernMunich-kebab-case.png" class="Img-Partido1"
+                                    alt="Bayern Munich">
+                            </p>
+                        </div>
+                    </div>
+
+                        <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                        <div class="Partido1">
+                            <h4>LIGA DE ESPAÑA</h4>
+                            <p>Fecha 19</p>
+                            <p>⚽️ 16/03/2023 17:30</p>
+                            <p>Barcelona 2.0
+                                <img src="./imagenes/barcelona.png" class="Img-Partido1" alt="Barcelona"> vs
+                                Real Madrid 2.5
+                                <img src="./imagenes/realmadrid-kebab-case.png" class="Img-Partido1" alt="Real Madrid">
+                            </p>
+                        </div>
+                        </div>
+                    </div>
+                </div>
     </header>
 
     <!--Comienzo del Main-->
@@ -297,7 +310,7 @@
         </aside>
     </div>
     <main class="Main">
-        <section class="Section">
+        <section class="Section container-fluid">
             <h2>
                 SELECCIONA TU EQUIPO FAVORITO Y CREA LAS <br>MEJORES APUESTAS!
             </h2>
@@ -312,7 +325,7 @@
                 </div>
             </div>
         </section>
-        <section class="Section-Deportes">
+        <section class="Section-Deportes2 container-fluid">
             <h2>REGISTRATE Y PARTICIPA DEL<br>AUSTRALIAN OPEN Y DEL MEJOR RUGBY.<br> DUPLICAMOS TU
                 DEPOSITO INICIAL HASTA<br>$5000</h2>
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
@@ -326,7 +339,7 @@
                 </div>
             </div>
         </section>
-        <section class="Section-Deportes2">
+        <section class="Section-Deportes3 container-fluid">
             <h2>
                 ACCEDE A TODA LA <br>INFORMACION DEL FIN <br>DE SEMANA.
                 FAVORITOS,ESTADISTICAS Y<br>
