--- a/pages/casino.html
+++ b/pages/casino.html
@@ -14,6 +14,8 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <!--Aos-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Otro link-->
+    <link href="css/hover.css" rel="stylesheet" media="all">
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Casino</title>
@@ -73,16 +75,24 @@
             <div class="row">
                 <h3>En vivo</h3>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+                    <a href="#">
                     <img class="Img-Casino" src="../imagenes/Blackjack-kebab-case.jpg" alt="BlackJack">
+                    </a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+                    <a href="#">
                     <img class="Img-Casino" src="../imagenes/Ruleta.jpg" alt="Ruleta">
+                    </a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+                    <a href="#">
                     <img class="Img-Casino" src="../imagenes/casinonuevo-kebab-case.jpeg" alt="Slots">
+                    </a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+                    <a href="#">
                     <img class="Img-Casino" src="../imagenes/Poker.jpg" alt="Poker">
+                    </a>
                     <button class="Button">Ver mas</button>
                 </div>
             </div>
@@ -247,10 +257,10 @@
     </div>
 
     <!--Inicio del Footer-->
-    <footer id="pie-Casino">
+    <footer id="pie">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
                     <div class="Ultimo">
                         <h2>SOBRE NOSOTROS</h2>
                         <ul>
@@ -260,7 +270,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
                     <div class="Ultimo">
                         <h2>LINKS DESTACADOS</h2>
                         <ul>
@@ -271,7 +281,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
                     <div class="Ultimo">
                         <h2>AYUDA</h2>
                         <ul>
@@ -281,7 +291,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-3">
                     <div class="Ultimo">
                         <h2>SEGUINOS EN<br>NUESTRAS REDES</h2>
                         <img class="Imagen-Footer" src="../imagenes/facebook.png" alt="facebook">
