--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -14,6 +14,8 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!--Aos-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Otro link-->
+    <link href="css/hover.css" rel="stylesheet" media="all">
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Informacion</title>
@@ -147,7 +149,7 @@
         <!--Inicio del Footer-->
         <!--Selector Id-->
         <!--Listas desordenadas-->
-        <footer id="pie-Info">
+        <footer id="pie">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -181,7 +183,6 @@
                             </ul>
                         </div>
                     </div>
-
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
                         <div class="Ultimo">
                             <h2>SEGUINOS EN<br>NUESTRAS REDES</h2>
