--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -15,6 +15,8 @@
      crossorigin="anonymous">
      <!--Aos-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Otro link-->
+    <link href="css/hover.css" rel="stylesheet" media="all">
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Registrate</title>
