--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
         content="Sitio de apuestas virtuales en vivo, orgullosos de ser el patrocinador oficial de Boca Juniors.">
     <!--Logo-->
     <link rel="shortcut icon" href="./imagenes/twenty-one-kebab-case.png" type="image/x-icon">
+    <!--Font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!--Aos-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!--Otro link-->
-    <link href="css/hover.css" rel="stylesheet" media="all">
-
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="./css/style.css">
     <title>Twenty-one</title>
@@ -74,46 +75,45 @@
             <div class="row">
                 <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                     <div class="Partido1">
-                        <h4>LIGA DE ESPAÑA</h4>
+                        <h1>LIGA DE ESPAÑA</h1>
                         <p>Copa UEFA</p>
                         <p>⚽️ 15/03/2023 21:30</p>
                         <p>
-                            Real S. 2.0
+                            Real Sociedad 2.0
                             <img src="./imagenes/real_sociedad_footballteam_18006-kebab-case.png" class="Img-Partido1"
                                 alt="Real Sociedad">vs Sevilla 1.1
                             <img src="./imagenes/Sevilla.png" class="Img-Partido1" alt="Sevilla">
                         </p>
                     </div>
                 </div>
-                    <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                        <div class="Partido1">
-                            <h4>UEFA CHAMPIONS</h4>
-                            <p>Octavos de final</p>
-                            <p>⚽️ 15/03/2023 17:30</p>
-                            <p>
-                                Atlético Madrid 1.5
-                                <img src="./imagenes/Atletico.png" class="Img-Partido1" alt="Atletico"> vs
-                                Bayern M 2.0
-                                <img src="./imagenes/BayernMunich-kebab-case.png" class="Img-Partido1"
-                                    alt="Bayern Munich">
-                            </p>
-                        </div>
-                    </div>
-
-                        <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                        <div class="Partido1">
-                            <h4>LIGA DE ESPAÑA</h4>
-                            <p>Fecha 19</p>
-                            <p>⚽️ 16/03/2023 17:30</p>
-                            <p>Barcelona 2.0
-                                <img src="./imagenes/barcelona.png" class="Img-Partido1" alt="Barcelona"> vs
-                                Real Madrid 2.5
-                                <img src="./imagenes/realmadrid-kebab-case.png" class="Img-Partido1" alt="Real Madrid">
-                            </p>
-                        </div>
-                        </div>
+                <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                    <div class="Partido1">
+                        <h1>UEFA CHAMPIONS</h1>
+                        <p>Octavos de final</p>
+                        <p>⚽️ 15/03/2023 17:30</p>
+                        <p>
+                            Atlético Madrid 1.5
+                            <img src="./imagenes/Atletico.png" class="Img-Partido1" alt="Atletico"> vs
+                            Bayern M 2.0
+                            <img src="./imagenes/BayernMunich-kebab-case.png" class="Img-Partido1" alt="Bayern Munich">
+                        </p>
                     </div>
                 </div>
+
+                <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                    <div class="Partido1">
+                        <h1>LIGA DE ESPAÑA</h1>
+                        <p>Fecha 19</p>
+                        <p>⚽️ 16/03/2023 17:30</p>
+                        <p>Barcelona 2.0
+                            <img src="./imagenes/barcelona.png" class="Img-Partido1" alt="Barcelona"> vs
+                            Real Madrid 2.5
+                            <img src="./imagenes/realmadrid-kebab-case.png" class="Img-Partido1" alt="Real Madrid">
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <!--Comienzo del Main-->
@@ -331,10 +331,10 @@
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="./imagenes/Tenis.jpg" class="carousel" alt="...">
+                        <img src="./imagenes/Tenis.jpg" class="carousel" alt="Tenis">
                     </div>
                     <div class="carousel-item">
-                        <img src="./imagenes/rugby.jpeg" class="carousel" alt="...">
+                        <img src="./imagenes/rugby.jpeg" class="carousel" alt="Rugby">
                     </div>
                 </div>
             </div>
@@ -349,10 +349,10 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
                         <img src="./imagenes/barcelona-vs-real-madrid-prediction-kebab-case.jpg" class="carousel"
-                            alt="...">
+                            alt="Clasico">
                     </div>
                     <div class="carousel-item">
-                        <img src="./imagenes/F1.jpg" class="carousel" alt="...">
+                        <img src="./imagenes/F1.jpg" class="carousel" alt="Formula 1">
                     </div>
                 </div>
             </div>
@@ -521,7 +521,7 @@
     <div class="Secciones">
         <section class="Seccion1">
             <h2>Juegos de mesa</h2>
-            <h5>Ruleta, Poker, Black Jack</h5>
+            <h3>Ruleta, Poker, Black Jack</h3>
             <img class="Imagen-Seccion1" src="./imagenes/ruletta-casino-kebab-case.jpeg" alt="Ruleta">
             <p>
                 Participa de los distintos modos <br>que te traemos, juga desde tu
@@ -532,7 +532,7 @@
 
         <section class="Seccion2">
             <h2>Casino en vivo</h2>
-            <h5>Disfruta del casino Twenty-one!</h5>
+            <h3>Disfruta del casino Twenty-one!</h3>
             <img class="Imagen-Seccion2" src="./imagenes/casinonuevo-kebab-case.jpeg" alt="Casino">
             <p>
                 En Twenty-one contamos con los mejores juegos<br>de casino en vivo.
@@ -543,7 +543,7 @@
 
         <section class="Seccion3">
             <h2>Video Bingo</h2>
-            <h5>Entra y gana con videobingo!</h5>
+            <h3>Entra y gana con videobingo!</h3>
             <img class="Imagen-Seccion3" src="./imagenes/bingo-riveirinhos-kebab-case.jpg" alt="Bingo">
             <p>
                 Los mejores juegos de videobingo<br>
@@ -555,7 +555,7 @@
 
     <section class="Quienes-somos">
         <div data-aos="zoom-out-down">
-            <h2>Twenty-one, diversion asegurada</h2>
+            <h4>Twenty-one, diversion asegurada</h4>
             <p>
                 Twenty-one es una plataforma de juego online de la Provincia de
                 Misiones,<br>
@@ -565,7 +565,7 @@
             </p>
         </div>
         <div data-aos="zoom-out-down">
-            <h2>Casa de Apuestas Deportivas</h2>
+            <h4>Casa de Apuestas Deportivas</h4>
             <p>
                 Estas listo para apostar a tu pasion? Ahora en Twenty-one<br>
                 podes crear las mejores apuestas duplicando tus ganancias, donde
@@ -575,7 +575,7 @@
             </p>
         </div>
         <div data-aos="zoom-out-down">
-            <h2>Blog de Informacion</h2>
+            <h4>Blog de Informacion</h4>
             <p>
                 Te traemos toda la informacion relevante que te servira a la hora de
                 apostar.<br>
@@ -591,7 +591,7 @@
     </section>
     <div class="Como-jugar">
         <div data-aos="zoom-out-down">
-            <h2>Ya sabes como jugar?</h2>
+            <h4>Ya sabes como jugar?</h4>
             <ol>
                 <li>Hacé click en el botón de “REGISTRARSE” en la home</li>
                 <li>
@@ -608,7 +608,7 @@
     <!--Inicio del Footer-->
     <footer id="pie">
         <div class="Ultimo">
-            <h2>SOBRE NOSOTROS</h2>
+            <h5>SOBRE NOSOTROS</h5>
             <ul>
                 <li>Juego Responsable</li>
                 <li>Reglas</li>
@@ -618,7 +618,7 @@
         </div>
 
         <div class="Ultimo">
-            <h2>LINKS DESTACADOS</h2>
+            <h5>LINKS DESTACADOS</h5>
             <ul>
                 <li>Black Jack</li>
                 <li>Casino</li>
@@ -629,7 +629,7 @@
         </div>
 
         <div class="Ultimo">
-            <h2>AYUDA</h2>
+            <h5>AYUDA</h5>
             <ul>
                 <li>Idioma</li>
                 <li>Ayuda, terminos y condiciones</li>
@@ -639,12 +639,14 @@
 
 
         <div class="Ultimo">
-            <h2>SEGUINOS EN<br />NUESTRAS REDES</h2>
-            <img class="Imagen-Footer" src="./imagenes/facebook.png" alt="facebook">
-            <img class="Imagen-Footer" src="./imagenes/instagram.png" alt="Instagram">
-            <img class="Imagen-Footer" src="./imagenes/tik-tok-kebab-case.png" alt="Tik-tok">
+            <h5>SEGUINOS EN<br />NUESTRAS REDES</h5>
+            <div class="Redes">
+                <a href="https://www.facebook.com/tomas.duran.5203"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.tiktok.com/en"><i class="fa-brands fa-tiktok"></i></a>
+                <a href="https://github.com/tomas-spec/Twentyone"><i class="fa-brands fa-github"></i></a>
+            </div>
         </div>
-
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
