--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -6,17 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Keywords" content="Apuestas virtuales deportivas, Casino, Bingo, Truco, Black-Jack, Ruleta, Slots">
-    <meta name="description" content="Ya no pierdas el tiempo y registrate, unite a la familia Twenty-one y accede a los mejores juegos.">
+    <meta name="description"
+        content="Ya no pierdas el tiempo y registrate, unite a la familia Twenty-one y accede a los mejores juegos.">
     <!--Logo-->
-    <!--Logo-->
+    <!--Font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="../imagenes/twenty-one-kebab-case.png" type="image/x-icon">
     <!--Boostrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-     crossorigin="anonymous">
-     <!--Aos-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!--Aos-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!--Otro link-->
-    <link href="css/hover.css" rel="stylesheet" media="all">
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Registrate</title>
@@ -62,6 +64,7 @@
     </div>
 
     <header class="Header-Registrate">
+        <h1>Unite a la comunidad</h1>
         <h2>Registrate y empezá a jugar!</h2>
     </header>
     <!--Inicio de Formularios-->
@@ -154,14 +157,81 @@
                 </div>
             </div>
             <!--Fin del form-->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                        <section class="Aclaraciones-Info">
+                            <div data-aos="zoom-out-down">
+                                <h3>Estaremos en la Formula 1!</h3>
+                                <p>
+                                    Ahora seremos patrocinadores oficiales de la scuderia Red-Bull,<br>
+                                    les daremos alas para que sean los mejores
+                                </p>
+                            </div>
+                            <div data-aos="zoom-out-down">
+                                <h3>Disponibles las 24 hs</h3>
+                                <p>
+                                    Si tenes algun incoveniente, no dudes en contactarnos, <br>
+                                    tu consulta no nos molesta.
+                                </p>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
 
+
+
+
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                        <section class="Quienes-somos-Info">
+                            <div data-aos="zoom-out-down">
+                                <h4>Twenty-one, diversion asegurada</h4>
+                                <p>
+                                    Twenty-one es una plataforma de juego online de la Provincia de
+                                    Misiones,<br>
+                                    sinedo la primer casa de apuestas oriunda de nuestra provinica, te
+                                    ofrecemos <br>una experiencia de juego legal y transparente para que
+                                    te sientas<br>seguro a la hora de divertirte.
+                                </p>
+                            </div>
+                            <div data-aos="zoom-out-down">
+                                <h4>Casa de Apuestas Deportivas</h4>
+                                <p>
+                                    Estas listo para apostar a tu pasion? Ahora en Twenty-one<br>
+                                    podes crear las mejores apuestas duplicando tus ganancias, donde
+                                    quieras<br>
+                                    y con el dispositivo que desees, te invitamos a vivir el deporte
+                                    <br>de una manera distinta.
+                                </p>
+                            </div>
+                            <div data-aos="zoom-out-down">
+                                <h4>Blog de Informacion</h4>
+                                <p>
+                                    Te traemos toda la informacion relevante que te servira a la hora de
+                                    apostar.<br>
+                                    Ultimos resultados, cantidad de tiros de esquina, probabilidades de
+                                    quien ganara,<br>
+                                    remates, ultimos campeones, y mucho mas! Elegí el deporte que más te
+                                    guste <br>
+                                    y la competencia del momento. Futbol, tenis, básquet y mucho más.
+                                    <br>¡Es el momento de jugar y encender el juego con tu equipo
+                                    favorito!
+                                </p>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
             <!--Inicio de Footer-->
             <footer id="pie">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
                             <div class="Ultimo">
-                                <h2>SOBRE NOSOTROS</h2>
+                                <h5>SOBRE NOSOTROS</h5>
                                 <ul>
                                     <li>Juego Responsable</li>
                                     <li>Reglas</li>
@@ -171,7 +241,7 @@
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
                             <div class="Ultimo">
-                                <h2>LINKS DESTACADOS</h2>
+                                <h5>LINKS DESTACADOS</h5>
                                 <ul>
                                     <li>Black Jack</li>
                                     <li>Casino</li>
@@ -182,7 +252,7 @@
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
                             <div class="Ultimo">
-                                <h2>AYUDA</h2>
+                                <h5>AYUDA</h5>
                                 <ul>
                                     <li>Idioma</li>
                                     <li>Ayuda, terminos y condiciones</li>
@@ -192,10 +262,13 @@
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
                             <div class="Ultimo">
-                                <h2>SEGUINOS EN<br>NUESTRAS REDES</h2>
-                                <img class="Imagen-Footer" src="../imagenes/facebook.png" alt="facebook">
-                                <img class="Imagen-Footer" src="../imagenes/instagram.png" alt="Instagram">
-                                <img class="Imagen-Footer" src="../imagenes/tik-tok-kebab-case.png" alt="Tik-tok">
+                                <h5>SEGUINOS EN<br>NUESTRAS REDES</h5>
+                                <div class="Redes">
+                                    <a href="https://www.facebook.com/tomas.duran.5203"><i class="fa-brands fa-facebook"></i></a>
+                                    <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="https://www.tiktok.com/en"><i class="fa-brands fa-tiktok"></i></a>
+                                    <a href="https://github.com/tomas-spec/Twentyone"><i class="fa-brands fa-github"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -205,8 +278,9 @@
             <script>
                 AOS.init();
             </script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" 
-            crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
